--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -16,6 +16,7 @@
   padding: 1.4rem;
   margin-left: 4px;
   margin-right: 4px;
+  transition: all 0.9s;
 
   &:hover {
     background-color: $color-primary-light;
