--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -11,3 +11,13 @@ body {
 .heading-primary--sub {
   font-weight: 400;
 }
+
+.heading-secondary {
+  font-size: 3rem;
+  color: $color-primary-dark;
+}
+
+.heading-tertiary {
+  font-size: 2.5rem;
+  color: $color-primary-dark;
+}
