--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -20,3 +20,7 @@ $color-gradient-desatured-gray-blue: hsl(237, 23%, 32%);
 // FONT
 
 $default-font-size: 1.6rem;
+
+// line-height
+
+$line-height: 3rem;
