--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -3,11 +3,11 @@
 }
 
 .u-margin-top-big {
-  margin-top: 7rem;
+  margin-top: 7rem !important;
 }
 
 .u-margin-top-extra {
-  margin-top: 10rem;
+  margin-top: 10rem !important;
 }
 
 .u-margin-bottom-big {
