--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -21,3 +21,8 @@ body {
   font-size: 2.5rem;
   color: $color-primary-dark;
 }
+
+.heading-tertiary--hilight {
+  font-size: 3.8rem;
+  color: $color-white;
+}
