--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -12,7 +12,7 @@
       font-size: 1.6rem;
       font-family: Ubuntu, sans-serif;
       color: $color-grayish-blue-dark;
-      line-height: 3rem;
+      line-height: $line-height;
     }
   }
 
@@ -22,5 +22,34 @@
     position: absolute;
     top: 10%;
     left: 58%;
+  }
+}
+
+.section-feature-hilight {
+  background-color: $color-gradient-desatured-gray-blue;
+  border-bottom-left-radius: 7rem;
+  border-top-right-radius: 7rem;
+  height: 33rem;
+  padding: 0 6rem;
+  position: relative;
+
+  &__hilight-container {
+    position: absolute;
+    width: 50%;
+    right: 5%;
+    top: 30%;
+
+    p {
+      color: $color-white;
+      font-size: 1.6rem;
+      line-height: $line-height;
+      width: 82%;
+    }
+  }
+
+  img {
+    position: absolute;
+    top: -6rem;
+    height: 48rem;
   }
 }
