add last section and footer

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 75vh;
+  min-height: 75vh;
   padding: 5rem 12rem;
   //   background-color: $color-primary;
   //   background-image: url(/img/bg-pattern-intro.svg);
