--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -14,6 +14,22 @@
   margin-bottom: 10rem !important;
 }
 
+.u-margin-bottom-medium {
+  margin-bottom: 5rem !important;
+}
+
 .u-margin-bottom-small {
   margin-bottom: 2rem !important;
+}
+
+.u-float-right {
+  float: right !important;
+}
+
+.u-float-left {
+  float: left !important;
+}
+
+.u-clear-right {
+  clear: right !important;
 }
